# CnC_Rebel

./: .clang-format  .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
Code/: CMakeLists.txt  commando.dsw  commando.opt  commando.sln  tools.dsw
Code/BandTest/: BandTest.cpp  BandTest.dsp  BandTest.dsw  BandTest.h  BandTest.plg  BandTest.rc  BandTest.vcxproj  BandTest.vcxproj.filters  CMakeLists.txt  resource.h
Code/BinkMovie/: BINKMovie.cpp  BINKMovie.h  BinkMovie.dsp  BinkMovie.vcxproj  BinkMovie.vcxproj.filters  CMakeLists.txt  subtitle.cpp  subtitle.h  subtitlemanager.cpp  subtitlemanager.h  subtitleparser.cpp  subtitleparser.h
Code/Combat/: CMakeLists.txt  CNCModeSettings.cpp  CNCModeSettings.h  Combat.dsp  Combat.vcxproj  Combat.vcxproj.filters  SoundEnvironment.cpp  SoundEnvironment.h  WeatherMgr.cpp  WeatherMgr.h  action.cpp  action.h  actionparams.h  activeconversation.cpp  activeconversation.h  airstripgameobj.cpp  airstripgameobj.h  animcontrol.cpp  animcontrol.h  apppackettypes.h  armedgameobj.cpp  armedgameobj.h  assetdep.cpp  assetdep.h  assets.cpp  assets.h  backgroundmgr.cpp  backgroundmgr.h  basecontroller.cpp  basecontroller.h  basegameobj.cpp  basegameobj.h  beacongameobj.cpp  beacongameobj.h  bones.cpp  bones.h  building.cpp  building.h  buildingaggregate.cpp  buildingaggregate.h  (+229 more)
Code/Commando/: AnnounceEvent.cpp  AnnounceEvent.h  AutoStart.cpp  AutoStart.h  CDKeyAuth.cpp  CDKeyAuth.h  CMakeLists.txt  ConsoleMode.cpp  ConsoleMode.h  DlgDownload.cpp  DlgDownload.h  DlgMPConnect.cpp  DlgMPConnect.h  DlgMPConnectionRefused.cpp  DlgMPConnectionRefused.h  DlgMPTeamSelect.cpp  DlgMPTeamSelect.h  DlgMessageBox.cpp  DlgMessageBox.h  DlgPasswordPrompt.cpp  DlgPasswordPrompt.h  DlgQuickmatch.cpp  DlgQuickmatch.h  DlgRestart.cpp  DlgRestart.h  DlgWOLAutoStart.cpp  DlgWOLAutoStart.h  DlgWOLLogon.cpp  DlgWOLLogon.h  DlgWOLSettings.cpp  DlgWOLSettings.h  DlgWOLWait.cpp  DlgWOLWait.h  DlgWebPage.cpp  DlgWebPage.h  FirewallWait.cpp  FirewallWait.h  GameResSend.cpp  GameResSend.h  GameSpyBanList.cpp  (+402 more)
Code/Installer/: CardSelectionDialog.cpp  CardSelectionDialog.h  CodeControl.h  CopyDialog.cpp  CopyDialog.h  CopyThread.cpp  CopyThread.h  DirectoryBrowser.cpp  DirectoryBrowser.h  DirectoryDialog.cpp  DirectoryDialog.h  ErrorHandler.cpp  ErrorHandler.h  FinalDialog.cpp  FinalDialog.h  FolderDialog.cpp  FolderDialog.h  InstallMenuDialog.cpp  InstallMenuDialog.h  Installer.cpp  Installer.dsp  Installer.h  Installer.rc  LicenseDialog.cpp  LicenseDialog.h  MessageBox.cpp  MessageBox.h  RAMFileFactory.cpp  RAMFileFactory.h  RegistryManager.cpp  RegistryManager.h  ReviewDialog.cpp  ReviewDialog.h  SafeTimer.cpp  SafeTimer.h  SerialDialog.cpp  SerialDialog.h  TransitionDialog.cpp  TransitionDialog.h  Translator.cpp  (+13 more)
Code/Launcher/: 256bmp.c  BFISH.CPP  BFISH.H  Launcher.lcf  Protect.cpp  Protect.h  configfile.cpp  configfile.h  dialog.cpp  dialog.h  dictionary.h  findpatch.cpp  findpatch.h  launcher.dsp  launcher1.rc  loadbmp.cpp  loadbmp.h  main.cpp  monod.cpp  patch.cpp  patch.h  process.cpp  process.h  resource.h  streamer.cpp  streamer.h  wdebug.cpp  wdebug.h  winblows.cpp  winblows.h  wstring.cpp  wstring.h  wstypes.h
Code/SControl/: CMakeLists.txt  SControl.dsp  SControl.vcxproj  SControl.vcxproj.filters  servercontrol.cpp  servercontrol.h  servercontrolsocket.cpp  servercontrolsocket.h
Code/Scripts/: CMakeLists.txt  Common.cpp  Common.h  CustomEvents.h  DLLmain.cpp  DPrint.cpp  DPrint.h  DrMobius.cpp  Group.cpp  Group.h  GroupControl.cpp  GroupControl.h  GroupScript.cpp  Mission00.cpp  Mission00.h  Mission01.cpp  Mission02.cpp  Mission03.cpp  Mission04.cpp  Mission05.cpp  Mission06.cpp  Mission07.cpp  Mission09.cpp  Mission1.h  Mission10.cpp  Mission10.h  Mission11.cpp  Mission11.h  Mission12.h  Mission2.h  Mission3.h  Mission4.h  Mission5.h  Mission6.h  Mission7.h  Mission8.h  Mission9.h  MissionDemo.cpp  MissionS04.cpp  MissionX0.cpp  (+57 more)
Code/Tools/: CMakeLists.txt
Code/WOLAPI/: downloaddefs.h  igrdefs.h
Code/WOLBrowser/: CMakeLists.txt  WOLBrowser.h  WOLBrowser_i.c
Code/WW3D2/: CMakeLists.txt  animatedsoundmgr.cpp  animatedsoundmgr.h  animobj.cpp  assetmgr.cpp  assetstatus.cpp  assetstatus.h  bitmaphandler.cpp  bmp2d.cpp  bmp2d.h  bwrender.h  camera.h  collect.cpp  collect.h  coltest.cpp  coltest.h  ddsfile.cpp  ddsfile.h  distlod.cpp  distlod.h  dspmake.cfg  dx8caps.cpp  dx8fvf.cpp  dx8fvf.h  dx8polygonrenderer.cpp  dx8polygonrenderer.h  dx8renderer.h  dx8rendererdebugger.cpp  dx8vertexbuffer.cpp  dx8vertexbuffer.h  dx8wrapper.cpp  dx8wrapper.h  dxdefs.h  dynamesh.cpp  font3d.cpp  font3d.h  framgrab.h  hanim.cpp  hanim.h  hanimmgr.cpp  (+73 more)
Code/WWAudio/: AABTreeSoundCullClass.h  AudibleSound.cpp  AudibleSound.h  AudioEvents.cpp  AudioEvents.h  AudioSaveLoad.cpp  AudioSaveLoad.h  CMakeLists.txt  FilteredSound.cpp  FilteredSound.h  Listener.cpp  Listener.h  ListenerHandle.cpp  ListenerHandle.h  LogicalListener.cpp  LogicalListener.h  LogicalSound.cpp  LogicalSound.h  PriorityVector.h  Sound2DHandle.cpp  Sound2DHandle.h  Sound3D.cpp  Sound3D.h  Sound3DHandle.cpp  Sound3DHandle.h  SoundBuffer.cpp  SoundBuffer.h  SoundChunkIDs.h  SoundCullObj.h  SoundDefinition.h  SoundHandle.cpp  SoundHandle.h  SoundPseudo3D.cpp  SoundPseudo3D.h  SoundScene.cpp  SoundScene.h  SoundSceneObj.cpp  SoundSceneObj.h  SoundStreamHandle.cpp  SoundStreamHandle.h  (+20 more)
Code/WWBitPack/: CMakeLists.txt  bitstream.cpp  encoderlist.cpp  encoderlist.h  encodertypeentry.cpp
Code/WWDebug/: CMakeLists.txt  dspmake.cfg  wwdebug.cpp  wwdebug.h  wwdebug.vcxproj.filters  wwhack.h  wwmemlog.h  wwprofile.cpp  wwprofile.h
Code/WWLib/: CMakeLists.txt  Except.h  FastAllocator.cpp  FastAllocator.h  LaunchWeb.h  _convert.cpp  _convert.h  _mono.cpp  _mono.h  _timer.cpp  argv.cpp  b64straw.cpp  base64.h  bittype.h  blit.cpp  blit.h  bool.h  bsearch.h  chunkio.cpp  convert.cpp  convert.h  cpudetect.cpp  crc.cpp  crc.h  crcpipe.h  dib.cpp  dib.h  draw.h  dsurface.h  ffactory.cpp  ffactory.h  fixed.h  gcd_lcm.h  gnu_regex.c  gnu_regex.h  hashcalc.h  hashtemplate.h  hsv.h  iff.h  (+77 more)
(+3537 files in other folders)
