add_subdirectory(BandTest)
add_subdirectory(BinkMovie)
add_subdirectory(Combat)
add_subdirectory(Commando)
add_subdirectory(SControl)
add_subdirectory(Scripts)
add_subdirectory(Tools)
add_subdirectory(wolapi)
add_subdirectory(WOLBrowser)
add_subdirectory(ww3d2)
add_subdirectory(wwaudio)
add_subdirectory(wwbitpack)
add_subdirectory(wwdebug)
add_subdirectory(wwlib)
add_subdirectory(wwmath)
add_subdirectory(wwnet)
add_subdirectory(wwphys)
add_subdirectory(wwsaveload)
add_subdirectory(wwtranslatedb)
add_subdirectory(wwui)
add_subdirectory(wwutil)

add_subdirectory(third_party)
